// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Table Edit matches snapshot when caption is set 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-toolbar"
      >
        <div
          class="components-dropdown components-dropdown-menu"
          tabindex="-1"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Edit table"
            class="components-button components-dropdown-menu__toggle has-icon"
            type="button"
          >
            <span
              class="dashicon dashicons dashicons-editor-table"
            />
          </button>
        </div>
      </div>
      <div
        class="components-panel__body blocks-table-settings is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Table settings
          </button>
        </h2>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-4"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-4"
            >
              Header section
            </label>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-5"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-5"
            >
              Footer section
            </label>
          </div>
        </div>
      </div>
      <figure
        class="wp-block-table is-style-material"
      >
        <div
          class="mdc-data-table"
        >
          <table
            class="has-fixed-layout"
          >
            <thead
              class=""
            >
              <tr
                class="mdc-data-table__header-row"
              >
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Version
                  </div>
                </th>
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Jazz Musician
                  </div>
                </th>
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Release Date
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="mdc-data-table__content"
            >
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.2
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Jaco Pastorius
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    May 7, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.1
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Betty Carter
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    February 21, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.0
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Bebo Valdés
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    December 6, 2018
                  </div>
                </td>
              </tr>
            </tbody>
            <tfoot
              class=""
            >
              <tr
                class="mdc-data-table__header-row"
              >
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 1
                  </div>
                </td>
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 2
                  </div>
                </td>
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 3
                  </div>
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
        <div
          class="mdc-data-table__caption"
        >
          <figcaption
            aria-label="Write caption…"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            role="textbox"
            style="white-space: pre-wrap;"
          >
            Material Data Table
          </figcaption>
        </div>
      </figure>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-toolbar"
    >
      <div
        class="components-dropdown components-dropdown-menu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Edit table"
          class="components-button components-dropdown-menu__toggle has-icon"
          type="button"
        >
          <span
            class="dashicon dashicons dashicons-editor-table"
          />
        </button>
      </div>
    </div>
    <div
      class="components-panel__body blocks-table-settings is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Table settings
        </button>
      </h2>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-4"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-4"
          >
            Header section
          </label>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-5"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-5"
          >
            Footer section
          </label>
        </div>
      </div>
    </div>
    <figure
      class="wp-block-table is-style-material"
    >
      <div
        class="mdc-data-table"
      >
        <table
          class="has-fixed-layout"
        >
          <thead
            class=""
          >
            <tr
              class="mdc-data-table__header-row"
            >
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Version
                </div>
              </th>
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Jazz Musician
                </div>
              </th>
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Release Date
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="mdc-data-table__content"
          >
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.2
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Jaco Pastorius
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  May 7, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.1
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Betty Carter
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  February 21, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.0
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Bebo Valdés
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  December 6, 2018
                </div>
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          >
            <tr
              class="mdc-data-table__header-row"
            >
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 1
                </div>
              </td>
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 2
                </div>
              </td>
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 3
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
      <div
        class="mdc-data-table__caption"
      >
        <figcaption
          aria-label="Write caption…"
          aria-multiline="true"
          class="rich-text block-editor-rich-text__editable"
          role="textbox"
          style="white-space: pre-wrap;"
        >
          Material Data Table
        </figcaption>
      </div>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data Table Edit matches snapshot when table has data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-toolbar"
      >
        <div
          class="components-dropdown components-dropdown-menu"
          tabindex="-1"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Edit table"
            class="components-button components-dropdown-menu__toggle has-icon"
            type="button"
          >
            <span
              class="dashicon dashicons dashicons-editor-table"
            />
          </button>
        </div>
      </div>
      <div
        class="components-panel__body blocks-table-settings is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Table settings
          </button>
        </h2>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Header section
            </label>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Footer section
            </label>
          </div>
        </div>
      </div>
      <figure
        class="wp-block-table is-style-material"
      >
        <div
          class="mdc-data-table"
        >
          <table
            class="has-fixed-layout"
          >
            <thead
              class=""
            >
              <tr
                class="mdc-data-table__header-row"
              >
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Version
                  </div>
                </th>
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Jazz Musician
                  </div>
                </th>
                <th
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Header label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Release Date
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="mdc-data-table__content"
            >
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.2
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Jaco Pastorius
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    May 7, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.1
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Betty Carter
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    February 21, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.0
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Bebo Valdés
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    December 6, 2018
                  </div>
                </td>
              </tr>
            </tbody>
            <tfoot
              class=""
            >
              <tr
                class="mdc-data-table__header-row"
              >
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 1
                  </div>
                </td>
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 2
                  </div>
                </td>
                <td
                  class="mdc-data-table__header-cell"
                >
                  <div
                    aria-label="Footer label"
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Footer Col 3
                  </div>
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
        <div
          class="mdc-data-table__caption"
        >
          <figcaption
            aria-label="Write caption…"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            role="textbox"
            style="white-space: pre-wrap;"
          />
        </div>
      </figure>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-toolbar"
    >
      <div
        class="components-dropdown components-dropdown-menu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Edit table"
          class="components-button components-dropdown-menu__toggle has-icon"
          type="button"
        >
          <span
            class="dashicon dashicons dashicons-editor-table"
          />
        </button>
      </div>
    </div>
    <div
      class="components-panel__body blocks-table-settings is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Table settings
        </button>
      </h2>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-0"
          >
            Header section
          </label>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-1"
          >
            Footer section
          </label>
        </div>
      </div>
    </div>
    <figure
      class="wp-block-table is-style-material"
    >
      <div
        class="mdc-data-table"
      >
        <table
          class="has-fixed-layout"
        >
          <thead
            class=""
          >
            <tr
              class="mdc-data-table__header-row"
            >
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Version
                </div>
              </th>
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Jazz Musician
                </div>
              </th>
              <th
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Header label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Release Date
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="mdc-data-table__content"
          >
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.2
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Jaco Pastorius
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  May 7, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.1
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Betty Carter
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  February 21, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.0
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Bebo Valdés
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  December 6, 2018
                </div>
              </td>
            </tr>
          </tbody>
          <tfoot
            class=""
          >
            <tr
              class="mdc-data-table__header-row"
            >
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 1
                </div>
              </td>
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 2
                </div>
              </td>
              <td
                class="mdc-data-table__header-cell"
              >
                <div
                  aria-label="Footer label"
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Footer Col 3
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
      <div
        class="mdc-data-table__caption"
      >
        <figcaption
          aria-label="Write caption…"
          aria-multiline="true"
          class="rich-text block-editor-rich-text__editable"
          role="textbox"
          style="white-space: pre-wrap;"
        />
      </div>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data Table Edit matches snapshot when table has no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-placeholder is-small"
      >
        <iframe
          aria-hidden="true"
          frameborder="0"
          src="about:blank"
          style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
        <div
          class="components-placeholder__label"
        >
          <i
            class="material-icons-outlined"
            size="24"
          >
            grid_on
          </i>
          Material Data Table
        </div>
        <div
          class="components-placeholder__instructions"
        >
          Data tables display sets of data across rows and columns.
        </div>
        <div
          class="components-placeholder__fieldset"
        >
          <form
            class="blocks-table__placeholder-form"
          >
            <div
              class="components-base-control blocks-table__placeholder-input css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <label
                  class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
                  for="inspector-text-control-0"
                >
                  Column count
                </label>
                <input
                  class="components-text-control__input"
                  id="inspector-text-control-0"
                  min="1"
                  type="number"
                  value="2"
                />
              </div>
            </div>
            <div
              class="components-base-control blocks-table__placeholder-input css-wdf2ti-Wrapper e1puf3u3"
            >
              <div
                class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
              >
                <label
                  class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
                  for="inspector-text-control-1"
                >
                  Row count
                </label>
                <input
                  class="components-text-control__input"
                  id="inspector-text-control-1"
                  min="1"
                  type="number"
                  value="2"
                />
              </div>
            </div>
            <button
              class="components-button blocks-table__placeholder-button is-primary"
              type="submit"
            >
              Create Table
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-placeholder is-small"
    >
      <iframe
        aria-hidden="true"
        frameborder="0"
        src="about:blank"
        style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
      <div
        class="components-placeholder__label"
      >
        <i
          class="material-icons-outlined"
          size="24"
        >
          grid_on
        </i>
        Material Data Table
      </div>
      <div
        class="components-placeholder__instructions"
      >
        Data tables display sets of data across rows and columns.
      </div>
      <div
        class="components-placeholder__fieldset"
      >
        <form
          class="blocks-table__placeholder-form"
        >
          <div
            class="components-base-control blocks-table__placeholder-input css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <label
                class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
                for="inspector-text-control-0"
              >
                Column count
              </label>
              <input
                class="components-text-control__input"
                id="inspector-text-control-0"
                min="1"
                type="number"
                value="2"
              />
            </div>
          </div>
          <div
            class="components-base-control blocks-table__placeholder-input css-wdf2ti-Wrapper e1puf3u3"
          >
            <div
              class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
            >
              <label
                class="components-base-control__label css-13ck15n-StyledLabel e1puf3u1"
                for="inspector-text-control-1"
              >
                Row count
              </label>
              <input
                class="components-text-control__input"
                id="inspector-text-control-1"
                min="1"
                type="number"
                value="2"
              />
            </div>
          </div>
          <button
            class="components-button blocks-table__placeholder-button is-primary"
            type="submit"
          >
            Create Table
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data Table Edit matches snapshot when table has rows 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-toolbar"
      >
        <div
          class="components-dropdown components-dropdown-menu"
          tabindex="-1"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Edit table"
            class="components-button components-dropdown-menu__toggle has-icon"
            type="button"
          >
            <span
              class="dashicon dashicons dashicons-editor-table"
            />
          </button>
        </div>
      </div>
      <div
        class="components-panel__body blocks-table-settings is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            Table settings
          </button>
        </h2>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-2"
            >
              Header section
            </label>
          </div>
        </div>
        <div
          class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
        >
          <div
            class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-3"
            >
              Footer section
            </label>
          </div>
        </div>
      </div>
      <figure
        class="wp-block-table is-style-material"
      >
        <div
          class="mdc-data-table"
        >
          <table
            class="has-fixed-layout"
          >
            <tbody
              class="mdc-data-table__content"
            >
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.2
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Jaco Pastorius
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    May 7, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.1
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Betty Carter
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    February 21, 2019
                  </div>
                </td>
              </tr>
              <tr
                class="mdc-data-table__row"
              >
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    5.0
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    Bebo Valdés
                  </div>
                </td>
                <td
                  class="mdc-data-table__cell"
                >
                  <div
                    aria-label=""
                    aria-multiline="true"
                    class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                    role="textbox"
                    style="white-space: pre-wrap;"
                  >
                    December 6, 2018
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="mdc-data-table__caption"
        >
          <figcaption
            aria-label="Write caption…"
            aria-multiline="true"
            class="rich-text block-editor-rich-text__editable"
            role="textbox"
            style="white-space: pre-wrap;"
          />
        </div>
      </figure>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-toolbar"
    >
      <div
        class="components-dropdown components-dropdown-menu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Edit table"
          class="components-button components-dropdown-menu__toggle has-icon"
          type="button"
        >
          <span
            class="dashicon dashicons dashicons-editor-table"
          />
        </button>
      </div>
    </div>
    <div
      class="components-panel__body blocks-table-settings is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
              />
            </svg>
          </span>
          Table settings
        </button>
      </h2>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-2"
          >
            Header section
          </label>
        </div>
      </div>
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper e1puf3u3"
      >
        <div
          class="components-base-control__field css-igk9ll-StyledField e1puf3u2"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-3"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-3"
          >
            Footer section
          </label>
        </div>
      </div>
    </div>
    <figure
      class="wp-block-table is-style-material"
    >
      <div
        class="mdc-data-table"
      >
        <table
          class="has-fixed-layout"
        >
          <tbody
            class="mdc-data-table__content"
          >
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.2
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Jaco Pastorius
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  May 7, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.1
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Betty Carter
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  February 21, 2019
                </div>
              </td>
            </tr>
            <tr
              class="mdc-data-table__row"
            >
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  5.0
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  Bebo Valdés
                </div>
              </td>
              <td
                class="mdc-data-table__cell"
              >
                <div
                  aria-label=""
                  aria-multiline="true"
                  class="rich-text block-editor-rich-text__editable wp-block-table__cell-content"
                  role="textbox"
                  style="white-space: pre-wrap;"
                >
                  December 6, 2018
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="mdc-data-table__caption"
      >
        <figcaption
          aria-label="Write caption…"
          aria-multiline="true"
          class="rich-text block-editor-rich-text__editable"
          role="textbox"
          style="white-space: pre-wrap;"
        />
      </div>
    </figure>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
